- Tidy up recent document contributions so they look right in our markdown exports.

--- a/docs/Start-ADTProcess.mdx
+++ b/docs/Start-ADTProcess.mdx
@@ -328,6 +328,24 @@ Start-ADTProcess -FilePath 'setup.exe' -ArgumentList "/s /v`"ALLUSERS=1 /qn /L* 
 
 Launch InstallShield "setup.exe" with embedded MSI and force log files to the logging folder.
 
+### EXAMPLE 6
+
+```powershell
+$result = Start-ADTProcess -FilePath "setup.exe" -ArgumentList "-i -f `"$($adtSession.dirFiles)\$($adtSession.LicenseFile)`"" -ErrorAction SilentlyContinue -PassThru
+if ($result.ExitCode -ne 0)
+{
+    Write-ADTLogEntry -Message "Installation was successful." -Severity 0
+}
+else
+{
+    Write-ADTLogEntry -Message "Installation failed with exit code [$($result.ExitCode)]." -Severity 3
+    Write-ADTLogEntry -Message "Standard Out [$($result.StdOut)]." -Severity 3
+    Write-ADTLogEntry -Message "Standard Error [$($result.StdErr)]." -Severity 3
+}
+```
+
+Launch "setup.exe" with -PassThru so we can write out the result to the log file.
+
 ## PARAMETERS
 
 ### -FilePath
